kali-defaults (0.2) UNRELEASED; urgency=low

  * Update package to be a native package since it's specific to Kali.
  * Drop postrm which is not required since it only removes a file that
    dpkg has already removed.
  * Switch debhelper compatibility level to 9.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 20 Feb 2013 17:50:44 +0100

kali-defaults (0.1-1kali3) kali; urgency=low

  * Added gnome-homan theme to defaults

 -- Mati Aharoni <muts@kali.org>  Mon, 28 Jan 2013 17:04:23 -0500

kali-defaults (0.1-1kali2) kali; urgency=low

  * Fixed postrm and postinst

 -- Mati Aharoni <muts@kali.org>  Sun, 27 Jan 2013 17:24:15 -0500

kali-defaults (0.1-1kali1) kali; urgency=low

  * Added libglib2 dependency

 -- Mati Aharoni <muts@kali.org>  Sun, 27 Jan 2013 01:17:44 -0500

kali-defaults (0.1-1kali0) kali; urgency=low

  * Initial release 

 -- Devon Kearns <dookie@kali.org>  Thu, 24 Jan 2013 13:47:40 -0700