@@ -1,0 +1,7 @@
+/apps/gnome-terminal/profiles/Default/use_theme_colors     false
+/apps/gnome-terminal/profiles/Default/background_color     "#000000000000"
+/apps/gnome-terminal/profiles/Default/foreground_color     "#FFFFFFFFFFFF"
+/apps/gnome-terminal/profiles/Default/scrollback_unlimited true
+/apps/gnome-terminal/profiles/Default/background_type      "transparent"
+/apps/gnome-terminal/profiles/Default/background_darkness  0.75
+/apps/gnome-terminal/global/confirm_window_close           false
