@@ -1,13 +1,0 @@
-#!/bin/bash
-
-if (/usr/bin/which gconftool-2); then
-	gconftool-2 --set "/apps/gnome-terminal/profiles/Default/use_theme_colors" --type bool false
-	gconftool-2 --set "/apps/gnome-terminal/profiles/Default/background_color" --type string "#000000000000"
-	gconftool-2 --set "/apps/gnome-terminal/profiles/Default/foreground_color" --type string "#FFFFFFFFFFFF"
-	gconftool-2 --type bool -s /apps/gnome-terminal/profiles/Default/scrollback_unlimited true
-	gconftool-2 --type string -s /apps/gnome-terminal/profiles/Default/background_type transparent
-	gconftool-2 --type float -s /apps/gnome-terminal/profiles/Default/background_darkness 0.75
-	gconftool-2 --type bool -s /apps/gnome-terminal/global/confirm_window_close false
-else
-	echo "[*] gconftool-2 not installed."
-fi
