@@ -4,6 +4,8 @@ kali-defaults (0.2) UNRELEASED; urgency=low
   * Drop postrm which is not required since it only removes a file that
     dpkg has already removed.
   * Switch debhelper compatibility level to 9.
+  * Replace postinst script with debian/kali-defaults.gconf-defaults
+    automatically handled by dh_gconf.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Wed, 20 Feb 2013 17:50:44 +0100
 
